# project-cli-assistant

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/memo_buddy/: __init__.py  __main__.py
src/memo_buddy/handlers/: contacts.py
src/memo_buddy/models/: contacts_book.py  exceptions.py
src/memo_buddy/services/: colorizer.py
src/memo_buddy/utils/: input_error.py
src/nestor/: __main__.py
src/nestor/handlers/: base.py  command_data_collector.py  constants.py  contacts.py  notes.py
src/nestor/models/: constants.py  contacts_book.py  exceptions.py  notes_book.py
src/nestor/services/: serializer.py  ui.py
src/nestor/utils/: csv_as_table.py  get_days_range.py  input_error.py  similar_strings.py  to_csv.py
